releng/imachination/k8s/authotron/service.yaml
# SPDX-FileCopyrightText: 2009- European Centre for Medium-Range Weather Forecasts (ECMWF)
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Service
metadata:
  name: authotron
spec:
  selector:
    app: authotron
  ports:
    - name: http
      port: 8080
      targetPort: http
